force-app/main/default/objects/Opportunity/fields/All_Stage_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Stage_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Stage Completed</label>
    <type>Checkbox</type>
</CustomField>