force-app/main/default/objects/Opportunity/fields/Current_Stage_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_DateTime__c</fullName>
    <label>Current Stage DateTime</label>
    <type>DateTime</type>
</CustomField>