force-app/main/default/objects/Opportunity/fields/Customer_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mobile_No__c</fullName>
    <label>Customer Mobile No.</label>
    <type>Phone</type>
</CustomField>