force-app/main/default/objects/Opportunity/fields/Opp_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Opp_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Opp ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>