force-app/main/default/objects/Opportunity/fields/Opportunity_Age__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Age__c</fullName>
    <formula>IF( ISBLANK( CloseDate ) , TODAY() - DATEVALUE(CreatedDate)  , CloseDate -  DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>