force-app/main/default/objects/Opportunity/fields/Originating_Branch__c.field-meta.xml
<CustomField>
    <fullName>Originating_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Branch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>