force-app/main/default/objects/Opportunity/fields/PA_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PA_Record_Type__c</fullName>
    <formula>TEXT(Process_Attribute__r.Sobject_RecordType_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PA Record Type</label>
    <type>Text</type>
</CustomField>