force-app/main/default/objects/Opportunity/fields/Process_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Attribute</label>
    <referenceTo>Process_Attribute__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>