force-app/main/default/objects/Opportunity/fields/Report_View__c.field-meta.xml
<CustomField>
    <fullName>Report_View__c</fullName>
    <formula>INCLUDES( $User.Branches_List__c , &apos;Head Office Chennai&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report View</label>
    <type>Checkbox</type>
</CustomField>