force-app/main/default/objects/Opportunity/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>SubStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Aadhaar Verification Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>