force-app/main/default/objects/Opportunity/recordTypes/Do_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Do_Onboarding</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Do Onboarding</label>
</RecordType>