force-app/main/default/objects/Opportunity/listViews/ALtiFI_Application_Investment.listView-meta.xml
<ListView>
    <fullName>ALtiFI_Application_Investment</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>AltiFi Investment</value>
    </filters>
    <label>ALtiFI Application Investment</label>
    <sharedTo>
        <group>Sales_AltiFi</group>
    </sharedTo>
</ListView>