force-app/main/default/objects/Opportunity/listViews/DO_Partner_GoLive.listView-meta.xml
<ListView>
    <fullName>DO_Partner_GoLive</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>DO Partner GoLive</value>
    </filters>
    <label>DO Partner GoLive</label>
    <sharedTo>
        <group>Business_Team_DO</group>
    </sharedTo>
</ListView>