force-app/main/default/objects/Opportunity/listViews/Education_Loan_Application.listView-meta.xml
<ListView>
    <fullName>Education_Loan_Application</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Education Loan Application</value>
    </filters>
    <label>Education Loan Application</label>
    <sharedTo>
        <group>Education_Loan_Application</group>
        <role>EL_Team_Mumbai_Call_center</role>
    </sharedTo>
</ListView>