force-app/main/default/objects/Opportunity/listViews/My_Closed_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Closed_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Closed Opportunities</label>
</ListView>